Added GameMode, FString and Member Functions

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -156,14 +156,14 @@ MRUItem0=/Game/Main
 
 [DetailCustomWidgetExpansion]
 BP_ThirdPersonCharacter_C=BP_ThirdPersonCharacter_C.Collision.Collision,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.TransformCommon.Transform,BP_LearningKit_PlayerCharacter_C.Collision.Collision,StaticMeshActor.Collision.Collision,
-CapsuleComponent=
+CapsuleComponent=BP_ThirdPersonCharacter_C.Collision.Collision,StaticMeshActor.Collision.Collision,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.TransformCommon.Transform,BP_LearningKit_PlayerCharacter_C.Collision.Collision,
 StaticMeshActor=BP_ThirdPersonCharacter_C.Collision.Collision,StaticMeshActor.Collision.Collision,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.TransformCommon.Transform,BP_LearningKit_PlayerCharacter_C.Collision.Collision,
 K2Node_VariableGet=BP_ThirdPersonCharacter_C.Collision.Collision,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.TransformCommon.Transform,BP_LearningKit_PlayerCharacter_C.Collision.Collision,StaticMeshActor.Collision.Collision,
 K2Node=BP_ThirdPersonCharacter_C.Collision.Collision,
 BP_Ammo_C=BP_ThirdPersonCharacter_C.Collision.Collision,
 BP_LearningKit_PlayerCharacter_C=BP_ThirdPersonCharacter_C.Collision.Collision,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.TransformCommon.Transform,BP_LearningKit_PlayerCharacter_C.Collision.Collision,StaticMeshActor.Collision.Collision,
-StaticMeshComponent=BP_ThirdPersonCharacter_C.Collision.Collision,StaticMeshActor.Collision.Collision,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.TransformCommon.Transform,BP_LearningKit_PlayerCharacter_C.Collision.Collision,
-SceneComponent=
+StaticMeshComponent=BP_ThirdPersonCharacter_C.Collision.Collision,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.TransformCommon.Transform,BP_LearningKit_PlayerCharacter_C.Collision.Collision,StaticMeshActor.Collision.Collision,
+SceneComponent=BP_ThirdPersonCharacter_C.Collision.Collision,StaticMeshActor.Collision.Collision,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.TransformCommon.Transform,BP_LearningKit_PlayerCharacter_C.Collision.Collision,
 MovingPlatform=BP_ThirdPersonCharacter_C.Collision.Collision,StaticMeshActor.Collision.Collision,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.TransformCommon.Transform,BP_LearningKit_PlayerCharacter_C.Collision.Collision,
 BP_MovingPlatform_C=BP_ThirdPersonCharacter_C.Collision.Collision,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.TransformCommon.Transform,BP_LearningKit_PlayerCharacter_C.Collision.Collision,StaticMeshActor.Collision.Collision,
 BP_PushingBlock_C=BP_ThirdPersonCharacter_C.Collision.Collision,StaticMeshActor.Collision.Collision,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.TransformCommon.Transform,BP_LearningKit_PlayerCharacter_C.Collision.Collision,
@@ -172,13 +172,15 @@ NiagaraActor=BP_ThirdPersonCharacter_C.Collision.Collision,StaticMeshActor.Colli
 NiagaraFloat=BP_ThirdPersonCharacter_C.Collision.Collision,StaticMeshActor.Collision.Collision,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.TransformCommon.Transform,BP_LearningKit_PlayerCharacter_C.Collision.Collision,
 LinearColor=BP_ThirdPersonCharacter_C.Collision.Collision,StaticMeshActor.Collision.Collision,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.TransformCommon.Transform,BP_LearningKit_PlayerCharacter_C.Collision.Collision,
 Actor=BP_ThirdPersonCharacter_C.Collision.Collision,StaticMeshActor.Collision.Collision,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.TransformCommon.Transform,BP_LearningKit_PlayerCharacter_C.Collision.Collision,
+BP_TurningPlatform_C=BP_ThirdPersonCharacter_C.Collision.Collision,StaticMeshActor.Collision.Collision,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.TransformCommon.Transform,BP_LearningKit_PlayerCharacter_C.Collision.Collision,
+Emitter=BP_ThirdPersonCharacter_C.Collision.Collision,StaticMeshActor.Collision.Collision,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.TransformCommon.Transform,BP_LearningKit_PlayerCharacter_C.Collision.Collision,
 
 [EditorStartup]
 LastLevel=/Game/Main
 
 [ModuleFileTracking]
-ObstacleAssault.TimeStamp=2023.04.10-00.27.19
-ObstacleAssault.LastCompileMethod=Unknown
+ObstacleAssault.TimeStamp=2023.04.13-00.57.31
+ObstacleAssault.LastCompileMethod=External
 StorageServerClient.TimeStamp=2023.04.08-00.12.18
 StorageServerClient.LastCompileMethod=Unknown
 CookOnTheFly.TimeStamp=2023.04.08-00.12.01
@@ -1177,10 +1179,7 @@ SequencerWidgets.TimeStamp=2023.04.08-00.12.16
 SequencerWidgets.LastCompileMethod=Unknown
 
 [AssetEditorSubsystem]
-CleanShutdown=False
-OpenAssetsAtExit=/Game/BP_MovingPlatform.BP_MovingPlatform
-OpenAssetsAtExit=/Game/BP_PushingBlock.BP_PushingBlock
-OpenAssetsAtExit=/Game/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
+CleanShutdown=True
 
 [DetailCategories]
 MovingPlatform.MovingPlatform=True
@@ -1461,13 +1460,59 @@ Actor.Replication=True
 Actor.HLOD=True
 Actor.Networking=True
 Actor.Actor=True
+BP_TurningPlatform_C.Moving Platform=True
+BP_TurningPlatform_C.Tick=True
+BP_TurningPlatform_C.Replication=True
+BP_TurningPlatform_C.Rendering=True
+BP_TurningPlatform_C.Collision=True
+BP_TurningPlatform_C.Actor=True
+BP_TurningPlatform_C.Input=True
+BP_TurningPlatform_C.HLOD=True
+BP_TurningPlatform_C.Physics=True
+BP_TurningPlatform_C.WorldPartition=True
+BP_TurningPlatform_C.Events=True
+BP_TurningPlatform_C.TransformCommon=True
+BP_TurningPlatform_C.Networking=True
+Emitter.TransformCommon=True
+Emitter.Particles=True
+Emitter.EmitterActions=True
+Emitter.Materials=True
+Emitter.Attachment=True
+Emitter.LOD=True
+Emitter.Lighting=True
+Emitter.HLOD=True
+Emitter.Rendering=True
+Emitter.Navigation=True
+Emitter.Tags=True
+Emitter.Activation=True
+Emitter.Cooking=True
+Emitter.Emitter=True
+Emitter.Replication=True
+Emitter.Physics=True
+Emitter.Networking=True
+Emitter.Actor=True
+BP_ObstacleAssault_C.Tick=True
+BP_ObstacleAssault_C.Classes=True
+BP_ObstacleAssault_C.Game=True
+BP_ObstacleAssault_C.GameMode=True
+BP_ObstacleAssault_C.Physics=True
+BP_ObstacleAssault_C.Events=True
+PlayerStart.TransformCommon=True
+PlayerStart.Object=True
+PlayerStart.Rendering=True
+PlayerStart.Replication=True
+PlayerStart.HLOD=True
+PlayerStart.Physics=True
+PlayerStart.Networking=True
+PlayerStart.Input=True
+PlayerStart.Actor=True
 
 [DetailPropertyExpansion]
 BP_ThirdPersonCharacter_C="\"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 ThirdPersonCharacter_C="\"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 Character="\"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 Pawn="\"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-BP_LearningKit_PlayerCharacter_C="\"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
+BP_LearningKit_PlayerCharacter_C="\"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" "
 BP_Ammo_C="\"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" "
 
@@ -1512,6 +1557,9 @@ RecentsFiles=C:/Program Files/EpicGames/UE_5.1/Engine/Plugins/Animation/ControlR
 /Game/LearningKit_Games/Blueprints/PlayerCharacter/BP_LearningKit_PlayerCharacter.BP_LearningKit_PlayerCharacter=0
 /Game/BP_Ammo.BP_Ammo=0
 /Game/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter=0
+/Game/BP_MovingPlatform.BP_MovingPlatform=0
+/Game/BP_PushingBlock.BP_PushingBlock=0
+/Game/Blueprints/BP_ObstacleAssault.BP_ObstacleAssault=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1572,7 +1620,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game
+ContentBrowserDrawer.SelectedPaths=/Classes_Game/ObstacleAssault
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1617,6 +1665,8 @@ User Created=False
 Advanced=False
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
+RecentlyPlaced=/Game/BP_TurningPlatform.BP_TurningPlatform;
 RecentlyPlaced=/Game/BP_PushingBlock.BP_PushingBlock;
 RecentlyPlaced=/Game/BP_MovingPlatform.BP_MovingPlatform;
 RecentlyPlaced=/Game/LearningKit_Games/Assets/Architecture/Walls/SM_Kit_Wall_Straight.SM_Kit_Wall_Straight;
@@ -1624,12 +1674,14 @@ RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasic
 RecentlyPlaced=/Engine/BasicShapes/Sphere.Sphere;/Engine/Transient.ActorFactoryBasicShape_0
 
 [ContentBrowserRecent]
-MRUItem0=/Game/BP_ThirdPersonCharacter
-MRUItem1=/Game/BP_PushingBlock
-MRUItem2=/Game/BP_MovingPlatform
-MRUItem3=/Game/UI/HUD
-MRUItem4=/Game/LearningKit_Games/Blueprints/PlayerCharacter/BP_LearningKit_PlayerCharacter
-MRUItem5=/Game/BP_Ammo
+MRUItem0=/Game/Blueprints/BP_ObstacleAssault
+MRUItem1=/Game/BP_TurningPlatform
+MRUItem2=/Game/BP_PushingBlock
+MRUItem3=/Game/BP_MovingPlatform
+MRUItem4=/Game/BP_ThirdPersonCharacter
+MRUItem5=/Game/UI/HUD
+MRUItem6=/Game/LearningKit_Games/Blueprints/PlayerCharacter/BP_LearningKit_PlayerCharacter
+MRUItem7=/Game/BP_Ammo
 
 [MessageLog]
 LastLogListing=PIE
