--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -156,7 +156,7 @@ MRUItem0=/Game/Main
 
 [DetailCustomWidgetExpansion]
 BP_ThirdPersonCharacter_C=BP_ThirdPersonCharacter_C.Collision.Collision,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.TransformCommon.Transform,BP_LearningKit_PlayerCharacter_C.Collision.Collision,StaticMeshActor.Collision.Collision,
-CapsuleComponent=BP_ThirdPersonCharacter_C.Collision.Collision,StaticMeshActor.Collision.Collision,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.TransformCommon.Transform,BP_LearningKit_PlayerCharacter_C.Collision.Collision,
+CapsuleComponent=BP_ThirdPersonCharacter_C.Collision.Collision,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.TransformCommon.Transform,BP_LearningKit_PlayerCharacter_C.Collision.Collision,StaticMeshActor.Collision.Collision,
 StaticMeshActor=BP_ThirdPersonCharacter_C.Collision.Collision,StaticMeshActor.Collision.Collision,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.TransformCommon.Transform,BP_LearningKit_PlayerCharacter_C.Collision.Collision,
 K2Node_VariableGet=BP_ThirdPersonCharacter_C.Collision.Collision,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.TransformCommon.Transform,BP_LearningKit_PlayerCharacter_C.Collision.Collision,StaticMeshActor.Collision.Collision,
 K2Node=BP_ThirdPersonCharacter_C.Collision.Collision,
@@ -174,12 +174,16 @@ LinearColor=BP_ThirdPersonCharacter_C.Collision.Collision,StaticMeshActor.Collis
 Actor=BP_ThirdPersonCharacter_C.Collision.Collision,StaticMeshActor.Collision.Collision,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.TransformCommon.Transform,BP_LearningKit_PlayerCharacter_C.Collision.Collision,
 BP_TurningPlatform_C=BP_ThirdPersonCharacter_C.Collision.Collision,StaticMeshActor.Collision.Collision,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.TransformCommon.Transform,BP_LearningKit_PlayerCharacter_C.Collision.Collision,
 Emitter=BP_ThirdPersonCharacter_C.Collision.Collision,StaticMeshActor.Collision.Collision,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.TransformCommon.Transform,BP_LearningKit_PlayerCharacter_C.Collision.Collision,
+BP_RotatingPlatfrom_C=BP_ThirdPersonCharacter_C.Collision.Collision,StaticMeshActor.Collision.Collision,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.TransformCommon.Transform,BP_LearningKit_PlayerCharacter_C.Collision.Collision,
+PlayerButton_BP_C=BP_ThirdPersonCharacter_C.Collision.Collision,StaticMeshActor.Collision.Collision,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.TransformCommon.Transform,BP_LearningKit_PlayerCharacter_C.Collision.Collision,
+BP_RotatingWall_C=BP_ThirdPersonCharacter_C.Collision.Collision,StaticMeshActor.Collision.Collision,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.TransformCommon.Transform,BP_LearningKit_PlayerCharacter_C.Collision.Collision,
+CharacterMovementComponent=BP_ThirdPersonCharacter_C.Collision.Collision,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.TransformCommon.Transform,BP_LearningKit_PlayerCharacter_C.Collision.Collision,StaticMeshActor.Collision.Collision,
 
 [EditorStartup]
 LastLevel=/Game/Main
 
 [ModuleFileTracking]
-ObstacleAssault.TimeStamp=2023.04.13-00.57.31
+ObstacleAssault.TimeStamp=2023.04.14-01.11.17
 ObstacleAssault.LastCompileMethod=External
 StorageServerClient.TimeStamp=2023.04.08-00.12.18
 StorageServerClient.LastCompileMethod=Unknown
@@ -1238,7 +1242,7 @@ BP_ThirdPersonCharacter_C.Networking=True
 BP_ThirdPersonCharacter_C.Input=True
 BP_ThirdPersonCharacter_C.Actor=True
 StaticMeshActor.Physics=True
-StaticMeshActor.Collision=False
+StaticMeshActor.Collision=True
 StaticMeshActor.TransformCommon=True
 StaticMeshActor.StaticMesh=True
 StaticMeshActor.Materials=True
@@ -1506,6 +1510,76 @@ PlayerStart.Physics=True
 PlayerStart.Networking=True
 PlayerStart.Input=True
 PlayerStart.Actor=True
+BP_MovingPlatform_C.Rotating=True
+BP_RotatingPlatfrom_C.Moving Platform=True
+BP_RotatingPlatfrom_C.Tick=True
+BP_RotatingPlatfrom_C.Rotating=True
+BP_RotatingPlatfrom_C.Replication=True
+BP_RotatingPlatfrom_C.Rendering=True
+BP_RotatingPlatfrom_C.Collision=True
+BP_RotatingPlatfrom_C.Actor=True
+BP_RotatingPlatfrom_C.Input=True
+BP_RotatingPlatfrom_C.HLOD=True
+BP_RotatingPlatfrom_C.Physics=True
+BP_RotatingPlatfrom_C.WorldPartition=True
+BP_RotatingPlatfrom_C.Events=True
+BP_PushingBlock_C.Rotating=True
+BP_RotatingPlatfrom_C.TransformCommon=True
+BP_RotatingPlatfrom_C.Networking=True
+PlayerButton_BP_C.Collision=True
+PlayerButton_BP_C.Physics=True
+PlayerButton_BP_C.TransformCommon=True
+PlayerButton_BP_C.Default=True
+PlayerButton_BP_C.Rendering=True
+PlayerButton_BP_C.Replication=True
+PlayerButton_BP_C.HLOD=True
+PlayerButton_BP_C.Networking=True
+PlayerButton_BP_C.Input=True
+PlayerButton_BP_C.Actor=True
+BP_RotatingWall_C.Moving Platform=True
+BP_RotatingWall_C.Tick=True
+BP_RotatingWall_C.Rotating=True
+BP_RotatingWall_C.Replication=True
+BP_RotatingWall_C.Rendering=True
+BP_RotatingWall_C.Collision=True
+BP_RotatingWall_C.Actor=True
+BP_RotatingWall_C.Input=True
+BP_RotatingWall_C.HLOD=True
+BP_RotatingWall_C.Physics=True
+BP_RotatingWall_C.WorldPartition=True
+BP_RotatingWall_C.Events=True
+BP_RotatingWall_C.TransformCommon=True
+BP_RotatingWall_C.Networking=True
+ChildActorComponent.Cooking=True
+ChildActorComponent.Tags=True
+ChildActorComponent.Rendering=True
+ChildActorComponent.ChildActorComponent=True
+ChildActorComponent.TransformCommon=True
+CharacterMovementComponent.Variable=True
+CharacterMovementComponent.Sockets=True
+CharacterMovementComponent.Character Movement (General Settings)=True
+CharacterMovementComponent.Character Movement: Walking=True
+CharacterMovementComponent.Character Movement: Jumping / Falling=True
+CharacterMovementComponent.ComponentTick=True
+CharacterMovementComponent.Character Movement (Networking)=True
+CharacterMovementComponent.Character Movement: Swimming=True
+CharacterMovementComponent.Character Movement: Flying=True
+CharacterMovementComponent.Character Movement: Custom Movement=True
+CharacterMovementComponent.Character Movement (Rotation Settings)=True
+CharacterMovementComponent.Character Movement: Physics Interaction=True
+CharacterMovementComponent.Character Movement=True
+CharacterMovementComponent.Character Movement: Avoidance=True
+CharacterMovementComponent.RootMotion=True
+CharacterMovementComponent.Character Movement: NavMesh Movement=True
+CharacterMovementComponent.NavMovement=True
+CharacterMovementComponent.Velocity=True
+CharacterMovementComponent.PlanarMovement=True
+CharacterMovementComponent.MovementComponent=True
+CharacterMovementComponent.Tags=True
+CharacterMovementComponent.ComponentReplication=True
+CharacterMovementComponent.Activation=True
+CharacterMovementComponent.Cooking=True
+CharacterMovementComponent.Events=True
 
 [DetailPropertyExpansion]
 BP_ThirdPersonCharacter_C="\"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
@@ -1560,6 +1634,8 @@ RecentsFiles=C:/Program Files/EpicGames/UE_5.1/Engine/Plugins/Animation/ControlR
 /Game/BP_MovingPlatform.BP_MovingPlatform=0
 /Game/BP_PushingBlock.BP_PushingBlock=0
 /Game/Blueprints/BP_ObstacleAssault.BP_ObstacleAssault=0
+/Game/BP_RotatingPlatfrom.BP_RotatingPlatfrom=0
+/Game/BP_RotatingWall.BP_RotatingWall=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1620,7 +1696,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Classes_Game/ObstacleAssault
+ContentBrowserDrawer.SelectedPaths=/Game
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1665,6 +1741,8 @@ User Created=False
 Advanced=False
 
 [PlacementMode]
+RecentlyPlaced=/Game/BP_RotatingWall.BP_RotatingWall;
+RecentlyPlaced=/Game/BP_RotatingPlatfrom.BP_RotatingPlatfrom;
 RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
 RecentlyPlaced=/Game/BP_TurningPlatform.BP_TurningPlatform;
 RecentlyPlaced=/Game/BP_PushingBlock.BP_PushingBlock;
@@ -1674,14 +1752,16 @@ RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasic
 RecentlyPlaced=/Engine/BasicShapes/Sphere.Sphere;/Engine/Transient.ActorFactoryBasicShape_0
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/BP_ObstacleAssault
-MRUItem1=/Game/BP_TurningPlatform
-MRUItem2=/Game/BP_PushingBlock
-MRUItem3=/Game/BP_MovingPlatform
-MRUItem4=/Game/BP_ThirdPersonCharacter
-MRUItem5=/Game/UI/HUD
-MRUItem6=/Game/LearningKit_Games/Blueprints/PlayerCharacter/BP_LearningKit_PlayerCharacter
-MRUItem7=/Game/BP_Ammo
+MRUItem0=/Game/BP_ThirdPersonCharacter
+MRUItem1=/Game/LearningKit_Games/Blueprints/PlayerCharacter/BP_LearningKit_PlayerCharacter
+MRUItem2=/Game/BP_RotatingWall
+MRUItem3=/Game/BP_RotatingPlatfrom
+MRUItem4=/Game/Blueprints/BP_ObstacleAssault
+MRUItem5=/Game/BP_TurningPlatform
+MRUItem6=/Game/BP_PushingBlock
+MRUItem7=/Game/BP_MovingPlatform
+MRUItem8=/Game/UI/HUD
+MRUItem9=/Game/BP_Ammo
 
 [MessageLog]
 LastLogListing=PIE
